# sp_vision_25

./: CMakeLists.txt
configs/: standard4.yaml
tasks/auto_aim/: CMakeLists.txt  yolo.cpp
tasks/auto_aim/yolos/: trt_infer.hpp  trt_yolo.cpp  trt_yolo.hpp
